[gd_scene load_steps=6 format=3 uid="uid://b0sslgqxojjt"]

[ext_resource type="Script" path="res://scripts/ability/hurtbox.gd" id="1_5c0wq"]
[ext_resource type="Script" path="res://scripts/components/damage_component.gd" id="2_g1qev"]

[sub_resource type="LabelSettings" id="LabelSettings_af1gl"]
font_size = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npilr"]
size = Vector2(18, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_plfsy"]
size = Vector2(22, 5)

[node name="Hundred Bomb" type="Area2D" node_paths=PackedStringArray("damage_component")]
texture_filter = 1
collision_layer = 16
collision_mask = 22
script = ExtResource("1_5c0wq")
max_collisions = 100
damage_component = NodePath("DamageComponent")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -18.0
offset_right = 20.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "ç™¾"
label_settings = SubResource("LabelSettings_af1gl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_npilr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_plfsy")

[node name="DamageComponent" type="Node" parent="."]
script = ExtResource("2_g1qev")

[node name="Explosion Timer" type="Timer" parent="."]
one_shot = true

[node name="Clear Ignored Nodes" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Arm Bomb" type="Timer" parent="."]
wait_time = 0.45
one_shot = true
autostart = true

[connection signal="timeout" from="Explosion Timer" to="." method="despawn"]
[connection signal="timeout" from="Clear Ignored Nodes" to="." method="clear_ignores"]
[connection signal="timeout" from="Arm Bomb" to="DamageComponent" method="set_enabled"]
[connection signal="timeout" from="Arm Bomb" to="." method="set_modulate" binds= [Color(0.74902, 0.188235, 0.188235, 1)]]
[connection signal="timeout" from="Arm Bomb" to="." method="reset_collisions" flags=3 binds= [0]]
